# cds

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.in  Doxyfile.in  README.md  build.sh  build_x64.sh  conanfile.txt  main.cpp  travis.yml.in
Documentation/html/: annotated.html  annotated_dup.js  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  navtreedata.js
Documentation/html/search/: all_10.js  all_6.js  all_c.js  all_d.js  functions_0.js  functions_10.js  functions_7.js  functions_b.js  namespaces_1.js  searchdata.js  typedefs_0.js
Documentation/xml/: dir_313caf1132e152dd9b58bea13a4052ca.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml
cmake/: opencv2.cmake  poppler.cmake
docker/: Dockerfile  cds.sh
docs/: annotated.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.js  files.html  files.js  functions.html  functions_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces.js  navtreeindex0.js
docs/d0/d64/: imageexif_8cpp_source.html
docs/d0/df5/: namespaceredis.html
docs/d1/d2a/: imageexif_8h_source.html
docs/d1/d73/: classutils_1_1Amazon-members.html
docs/d1/d93/: mod__ebooks_8cpp_source.html
docs/d1/de7/: structcds_1_1mod_1_1TmdbMovie-members.html
docs/d3/d17/: structutils_1_1AmazonResult-members.html
docs/d4/d43/: structContainer.html  structContainer.js
docs/d4/d74/: structcds_1_1Config.html  structcds_1_1Config.js
docs/d4/d75/: structdata-members.html
docs/d4/d77/: scanner_8cpp_source.html
docs/d4/d9e/: structcds_1_1Config-members.html
docs/d4/db2/: structcds_1_1mod_1_1TmdbMovie.html
docs/d4/dbb/: classcds_1_1mod_1_1ModMovies.html
docs/d5/d0f/: mod__movies_8cpp_source.html
docs/d5/d1f/: structcds_1_1ECoverSizes-members.html
docs/d5/d7b/: mod__albums_8cpp_source.html
docs/d5/da6/: structcds_1_1ECoverSizes.html
docs/d5/db2/: image_8h_source.html
docs/d5/dfb/: classcds_1_1mod_1_1ModSeries.html  classcds_1_1mod_1_1ModSeries.js
docs/d6/d40/: classcds_1_1Scanner-members.html
docs/d6/d65/: filemetaregex_8h_source.html
docs/d6/dc9/: classcds_1_1mod_1_1ModImages.html  classcds_1_1mod_1_1ModImages.js
docs/d6/ddf/: classcds_1_1mod_1_1ModAlbums-members.html
docs/d7/d3c/: mod__ebooks_8h_source.html
docs/d8/d73/: classutils_1_1Image-members.html
docs/d8/d79/: classutils_1_1Image.html  classutils_1_1Image.js
docs/d8/d96/: classcds_1_1mod_1_1ModAlbums.html  classcds_1_1mod_1_1ModAlbums_ab5f18f0ed63bbceaf6a149fcb534615e_icgraph.map
docs/d8/da5/: mod__albums_8h_source.html
docs/d8/dc3/: server_8h_source.html
docs/d9/d60/: namespacecds.html  namespacecds.js  namespacecds_a033625ff6b0a15415bbab3db4c3e1309_icgraph.map  namespacecds_a033625ff6b0a15415bbab3db4c3e1309_icgraph.md5  namespacecds_ad64f032e28ec0cc0b09c73a48b13eeab_cgraph.map  namespacecds_ad64f032e28ec0cc0b09c73a48b13eeab_cgraph.md5  namespacecds_ad64f032e28ec0cc0b09c73a48b13eeab_icgraph.md5
docs/d9/db6/: datastore_8h_source.html
docs/d9/dde/: amazon_8cpp_source.html
docs/d9/dfc/: classcds_1_1Server-members.html
docs/da/d57/: classdata_1_1NodeType-members.html
docs/da/d61/: classcds_1_1mod_1_1ModEbooks.html  classcds_1_1mod_1_1ModEbooks.js
docs/db/d0c/: classcds_1_1mod_1_1ModSeries-members.html
docs/db/d11/: image_8cpp_source.html
docs/db/d16/: config_8h_source.html
docs/db/d2f/: structutils_1_1AmazonResult.html
docs/db/d39/: amazon_8h_source.html
docs/db/d62/: scanner_8h_source.html
docs/db/d6e/: classutils_1_1Amazon.html  classutils_1_1Amazon.js
docs/db/d7b/: classcds_1_1FileMetaRegex.html  classcds_1_1FileMetaRegex.js  classcds_1_1FileMetaRegex_a337a38c50294bc5d71c7524c44277565_icgraph.map
docs/db/db9/: classcds_1_1mod_1_1ModMovies-members.html
docs/db/de2/: mod__images_8h_source.html
docs/dc/d37/: mod__images_8cpp_source.html
docs/dc/d3f/: __icons_8h_source.html
docs/dc/d45/: __lua_8h_source.html
docs/dc/d56/: classcds_1_1mod_1_1ModImages-members.html
docs/dd/d42/: __utils_8h_source.html
docs/de/d80/: structcds_1_1RuleItem-members.html
docs/de/d91/: mod__series_8cpp_source.html
docs/html/: annotated.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html
docs/search/: all_0.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_9.js  classes_a.js  functions_2.js  functions_3.js  functions_8.js  functions_e.js  functions_f.js  namespaces_0.js
docs/xml/: dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.xml
script/: cds.sh
src/: CMakeLists.txt  _lua.h  _utils.h  config.cpp  config.h  datastore.h  filemetaregex.cpp  filemetaregex.h  scanner.cpp  scanner.h  server.cpp  server.h
src/lua/: index.lua  index.lua.h
src/modules/: imageexif.cpp  imageexif.h  mod_albums.cpp  mod_albums.h  mod_ebooks.cpp  mod_ebooks.h  mod_images.cpp  mod_images.h  mod_movies.cpp  mod_movies.h  mod_series.cpp  mod_series.h
src/utils/: amazon.cpp  amazon.h  cuesheet.cpp  cuesheet.h  image.cpp  image.h  imageexif.cpp  imageexif.h  musicbrainz.cpp  musicbrainz.h
test/: _utilstest.cpp  amazontest.cpp  configtest.cpp  cuesheettest.cpp  datastoretest.cpp  filemetaregextest.cpp  imagetest.cpp  mod_moviestest.cpp  musicbrainztest.cpp  scannertest.cpp
(+274 files in other folders)
